# real-time-pbr

./: .gitignore  CMakeLists.txt  README.md
assets/: box.fbx  box_test.eo  bunny.mtl  cylinder.fbx  plane.fbx  prism.fbx  prism2.fbx  rectangle1.fbx  rectangle2.fbx  stone_floor.fbx  test2.eo  tunnel.fbx
assets/.mayaSwatches/: brian.jpg.swatch  brian.png.swatch  prism_diffuse.png.swatch  stone.png.swatch  stone_diffuse.bmp.swatch  stone_diffuse.png.swatch  stone_norm.png.swatch  stone_normal.png.swatch  stone_specular.png.swatch
assets/drawers/: drawers.eo  drawers_ao.eo  drawers_no_maps.eo  low.fbx
assets/primitives/: box.eo  box_no_maps.eo  sphere_no_maps.eo
assets/sculpture/: sculpture.eo  sculpture2.eo  sculpture_albedo.tga  sculpture_gloss.tga  sculpture_normal.tga  sculpture_specular.tga
assets/sculpture/.mayaSwatches/: sculpture_normal.tga.swatch
include/: game.h  game.hpp
include/gfx/: camera.h  color.h  constants.h  directional_light.h  environment.h  exceptions.h  game_window.h  light.h  mappable.h  material.h  mesh.h  model_info.h  model_instance.h  point_light.h  texture_manager.h  util.h
shaders/: directional_shadow.frag  directional_shadow.vert  hdr.frag  hdr.vert  main.frag  main.vert  skybox.frag  skybox.vert  std.frag  std.vert
src/: demo.cc  main.cc  main.cpp
src/gfx/: camera.cc  directional_light.cc  environment.cc  game_window.cc  material.cc  mesh.cc  model_info.cc  model_instance.cc  point_light.cc  texture_manager.cc  util.cc
